--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Phillip McLaurin
 email: phillip@phillipmclaurin.com
+author: Phillip
 description: >- # this means to ignore newlines until "baseurl:"
   Software Developer  |  Musician  |  Baseball Fanatic
 baseurl: "" # the subpath of your site, e.g. /blog
