--- a/_config.yml
+++ b/_config.yml
@@ -18,17 +18,22 @@ email: phillip@phillipmclaurin.com
 author: Phillip
 description: >- # this means to ignore newlines until "baseurl:"
   Software Developer  |  Musician  |  Baseball Fanatic
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/"
 url: "www.phillipmclaurin.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: porkchopphil
 github_username:  mclaurinpd
 linkedin_username: phillipmclaurin
+
+#pagination
+paginate: 5
+paginate_path: "/posts/page:num"
 
 # Build settings
 markdown: kramdown
 theme: jekyll-theme-clean-blog
 plugins:
   - jekyll-feed
+  - jekyll-paginate
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
