--- a/_config.yml
+++ b/_config.yml
@@ -17,12 +17,18 @@ title: Phillip McLaurin
 email: phillip@phillipmclaurin.com
 author: Phillip
 description: >- # this means to ignore newlines until "baseurl:"
-  Software Developer  |  Musician  |  Baseball Fanatic
+  Software Developer  |  Musician  |  Baseball Nerd
 baseurl: "/"
 url: "www.phillipmclaurin.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: porkchopphil
+twitter: porkchopphil
 github_username:  mclaurinpd
 linkedin_username: phillipmclaurin
+
+social:
+  name: Phillip McLaurin
+  links:
+    - https://twitter.com/porkchopphil
 
 #pagination
 paginate: 5
@@ -34,6 +40,7 @@ theme: jekyll-theme-clean-blog
 plugins:
   - jekyll-feed
   - jekyll-paginate
+  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
